# project

./: CMakeLists.txt  attendance.cpp  attendance.h  attendance.ui  img.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui  regi.cpp  regi.h  regi.ui
database/: admin.db  admin.sqbpro  config.h.in.txt
